# tpch-cpp

./: .gitignore  .gitmodules  BUILD_AND_BENCHMARK_GUIDE.md  CI_SETUP.md  CMakeLists.txt  FFI_OWNERSHIP_ANALYSIS.md  GIT_RULES.md  INTEGRATION_ARCHITECTURE.md  LANCE_FFI_ANALYSIS.md  LANCE_FFI_PHASE1_5_IMPLEMENTATION.md  LANCE_FFI_STATUS_SUMMARY.md  ORC_VS_CSV_BENCHMARK_REPORT.md  PAIMON_LANCE_IMPLEMENTATION_PLAN.md  PHASE13.3_COMPLETION.md  PHASE13.6_COMPLETION.md  PHASE13.7_XSIMD_INTEGRATION.md  PHASE15_RESULTS.md  PHASE16_ANALYSIS.md  PHASE16_BENCHMARK_ANALYSIS.xlsx  PHASE16_PLAN.md  PHASE1_5_COMPLETION_SUMMARY.md  PHASE1_5_QUICK_START.md  PHASE1_5_SCALING_VERIFICATION.md  PHASE1_BENCHMARK_REPORT.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_EXPECTATIONS_VS_REALITY.md  PHASE1_QUICK_START.md  PHASE_11_3_IMPLEMENTATION.md  PHASE_2_0A_BENCHMARKING_ANALYSIS.md  PHASE_2_0A_BENCHMARK_RESULTS_SF1.txt  PHASE_2_0B_PROFILING_ANALYSIS.md  PHASE_2_0B_SUMMARY.md  PHASE_2_0C_2_IMPLEMENTATION_PLAN.md  PHASE_2_0C_2_RESULTS.md  PHASE_2_0C_3_RESULTS.md  PHASE_2_0C_4_INVESTIGATION_REPORT.md  PHASE_2_0C_ALL_TABLES_BENCHMARK.txt  PHASE_2_0C_BATCH_SIZE_RESULTS.txt  PHASE_2_0C_BENCHMARK_ANALYSIS.md  PHASE_2_0C_COMPLETE_SUMMARY.md  (+15 more)
.docker/: Dockerfile.all  Dockerfile.base  Dockerfile.lance  Dockerfile.orc  README.md
.github/workflows/: ci.yml  docker-images.yml
benchmark-results/: BENCHMARK_COMPREHENSIVE_RESULTS_MAX.md  DICT_COMPRESSION_OPTIMIZATION.md  EXCEL_GUIDE.md  INTEGRATION_TEST_SUMMARY.md  LANCE_STREAMING_ZERO_COPY_INVESTIGATION_SF5_STORE_SALES.md  PART_TABLE_BUG_ANALYSIS.md  PERFORMANCE_CONSOLIDATED.md  PHASE13_FINAL_SUMMARY.md  PHASE13_PERFORMANCE_REPORT.md  PHASE16_COMPREHENSIVE_ANALYSIS.md  PHASE16_README.md  PHASE16_Results.xlsx  PHASE16_SUMMARY.json  PHASE_12_5_COMPLETION_SUMMARY.md  PHASE_12_SUMMARY.md  STORE_SALES_LANCE_STREAMING_LARGE_FRAGMENT_EXPERIMENT.md  STORE_SALES_LANCE_STREAMING_RERUN_MATRIX_128x1M.md  STORE_SALES_LANCE_STREAMING_SCALE_PROFILE.md  integration_test_analysis.md  phase10_results.json  phase12_5_async_benchmark.md  phase12_5_final_analysis.md  phase12_6_results.md  phase13_results.json  profiling_analysis_phase12.2.md
cmake/: CompilerWarnings.cmake  FindArrow.cmake  FindORC.cmake  FindPaimon.cmake  FindThrift.cmake  FindUring.cmake  Findlz4.cmake  Findre2.cmake  Findzstd.cmake  gen_dist_cache.py  gen_dists.py  gen_dsts.py
docs/: ORC_RUNTIME_ISSUE.md  parallel_uring_arch.md
examples/: CMakeLists.txt  async_io_demo.cpp  multi_table_benchmark.cpp  simple_arrow_parquet.cpp  simple_csv.cpp  simple_orc.cpp
include/tpch/: arena_allocator.hpp  async_io.hpp  avro_writer.hpp  buffer_lifetime_manager.hpp  builder_pool.hpp  csv_writer.hpp  dbgen_converter.hpp  dbgen_wrapper.hpp  dsdgen_col_idx.hpp  dsdgen_converter.hpp  dsdgen_wrapper.hpp  iceberg_writer.hpp  io_uring_output_stream.hpp  io_uring_pool.hpp  lance_ffi.h  lance_writer.hpp  multi_table_writer.hpp  orc_writer.hpp  paimon_writer.hpp  parquet_writer.hpp  performance_counters.hpp  shared_async_io.hpp  simd_string_utils.hpp  writer_interface.hpp  zero_copy_converter.hpp
scripts/: Install Arrow on Ubuntu.md  analyze_performance.py  benchmark.sh  build_arrow_from_source.sh  build_orc_from_source.sh  build_orc_without_protobuf.sh  build_paimon_from_source.sh  check_performance_regression.sh  ci_build_arrow_and_orc.sh  ci_install_deps.sh  ci_run_benchmarks.sh  comprehensive_benchmark.py  gen_col_indices.py  install_deps.sh  orc_vs_parquet_benchmark.py  parallel_generate.sh  parse_benchmark_logs.py  phase10_benchmark.py  phase12_5_benchmark.py  phase13_benchmark.py  phase15_comprehensive_sf10_benchmark.py  phase1_benchmark_results.sh  phase1_full_benchmark.sh  phase1_lance_benchmark.sh  phase2_0c2a_lance_config_benchmark.py  phase2_0c_batch_size_benchmark.py  phase2_0c_benchmark_all_tables.py  profile_benchmark.sh  verify_phase1.sh  visualize_benchmark_results.py  visualize_comprehensive_results.py
src/: main.cpp  multi_table_writer.cpp  tpcds_main.cpp
src/async/: async_io_stub.cpp  io_uring_context.cpp  io_uring_output_stream.cpp  io_uring_pool.cpp  shared_async_io.cpp
src/dbgen/: dbgen_converter.cpp  dbgen_stubs.c  dbgen_wrapper.cpp  zero_copy_converter.cpp
src/dsdgen/: dsdgen_converter.cpp  dsdgen_wrapper.cpp
src/util/: builder_pool.cpp
src/writers/: csv_writer.cpp  iceberg_avro.hpp  iceberg_writer.cpp  lance_writer.cpp  orc_writer.cpp  paimon_writer.cpp  parquet_writer.cpp
tests/: CMakeLists.txt  buffer_lifetime_manager_test.cpp  dbgen_batch_iterator_test.cpp  lance_writer_test.cpp  paimon_writer_test.cpp
